<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/AppTheme"
    tools:context=".MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/name_text"
            style="@style/TextTheme2"
            android:layout_width="fill_parent"
            android:background="@android:color/transparent"
            android:hint="@string/name"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/text_books"
            style="@style/TextTheme"
            android:text="@string/books"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/name_text" />

        <CheckBox
            android:id="@+id/fictional_checkbox"
            style="@style/TextTheme2"
            android:onClick="addFictional"
            android:text="@string/fictional"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_books" />

        <CheckBox
            android:id="@+id/non_fictional_checkbox"
            style="@style/TextTheme2"
            android:onClick="addNonFictional"
            android:text="@string/nonFictional"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fictional_checkbox" />

        <TextView
            android:id="@+id/text_quantity"
            style="@style/TextTheme"
            android:text="@string/quantity"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/non_fictional_checkbox" />

        <TextView
            android:id="@+id/text_quantity_number"
            style="@style/NumberTheme"
            android:text="@string/quantity_number"
            app:layout_constraintLeft_toRightOf="@id/text_quantity"
            app:layout_constraintTop_toBottomOf="@id/non_fictional_checkbox" />

        <Button
            android:id="@+id/button_decrease"
            style="@style/ButtonSquare"
            android:onClick="decrement"
            android:text="@string/decrement"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_quantity_number" />

        <Button
            android:id="@+id/button_increase"
            style="@style/ButtonSquare"
            android:onClick="increment"
            android:text="@string/increment"
            app:layout_constraintLeft_toRightOf="@id/button_decrease"
            app:layout_constraintTop_toBottomOf="@id/text_quantity_number" />
        <!--
                <TextView
                    android:id="@+id/text_price"
                    style="@style/TextTheme"
                    android:text="@string/price"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/button_decrease" />

                <TextView
                    android:id="@+id/text_price_number"
                    style="@style/NumberTheme"
                    android:text="@string/price_number"
                    app:layout_constraintLeft_toRightOf="@id/text_price"
                    app:layout_constraintTop_toBottomOf="@id/button_decrease" />
 -->
        <Button
            android:id="@+id/button_borrow"
            style="@style/ButtonTheme"
            android:onClick="submitOrder"
            android:text="@string/borrow"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_decrease" />

        <Button
            android:id="@+id/button_cancel"
            style="@style/ButtonTheme"
            android:onClick="cancelOrder"
            android:text="@string/cancel"
            app:layout_constraintLeft_toRightOf="@id/button_borrow"
            app:layout_constraintTop_toBottomOf="@id/button_decrease" />

        <TextView
            android:id="@+id/text_order_message"
            style="@style/TextTheme2"
            android:text="@string/order_message"
            android:textColor="@android:color/holo_red_dark"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_borrow" />
        <ListView
            android:id = "@+id/listView"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content" />

    </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
